package src.Model;

public class FacadeModele {

}
