package src.Model;

public class GestionnaireParties {

}
