package src.Model;

public class Paragraphe {

}
