package src.Model;

public class Partie {

}
