package src.Model;

public class Personnage {

}
