package src.Model;

public class Univers {

}
