package src.Vue;

/**
 * Interface commune à toutes les vues.
 */
public interface IVue {
    void afficher();
    void fermer();
}