package src.Vue;

public abstract class VueAbstraite extends JFrame {

}
