package src.Vue;

public class VueConsultationBiographie {

}
