package src.Vue;

public class VueCreationPersonnage extends VueAbstraite {

}
