package src.Vue;

public class VueTableauDeBord extends VueAbstraite {

}
